src/objects/LeanData__LeadFilterAction__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Field_Name__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__NodeID__c</fullName>
        <label>NodeID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LeadFilterAction</label>
</CustomObject>